[tool.poetry]
name = "chatgpt-response"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chatgpt_response"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-unittest = "^0.1.3"
fluentcheck = "^0.2.0"
requests = "^2.28.2"
flask = "^2.2.3"
flask-injector = "^0.14.0"
inject = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
